<resources>
    <string name="app_name">StudentMgr</string>
    <string name="add_stu">添加学生信息</string>
    <string name="name">姓名</string>
    <string name="sid">学号</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="Literature">文学</string>
    <string name="Sports">体育</string>
    <string name="Music">音乐</string>
    <string name="Art">美术</string>
    <string name="Submit">提交</string>
    <string name="Reset">重置</string>
    <string name="hobby">爱好</string>
    <string name="searchString">查找学生(学号)</string>
    <string name="Search">搜索</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">还没有账号?前往注册</string>
    <string name="logout">注销</string>
</resources>