<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityLogin">

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:autofillHints="username"
        android:layout_marginTop="100dp"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:layout_below="@id/username"
        android:inputType="textPassword"
        android:autofillHints="password"
        android:layout_marginTop="50dp"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge" />

    <Button
        android:id="@+id/register"
        android:layout_below="@id/password"
        android:layout_marginTop="30dp"
        android:layout_marginStart="100dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#00BCD4"
        android:text="@string/register"
        android:background="#00000000"
        />

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/register"
        android:layout_marginTop="30dp"
        android:layout_marginStart="50dp"/>

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@id/register"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@id/loginButton"
        android:layout_marginStart="100dp"/>

</RelativeLayout>
